--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>抽签转盘</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <style>
         :root {
             --primary: #007AFF;
