--- a/index.html
+++ b/index.html
@@ -508,9 +508,11 @@
             // 核心修正逻辑：
             // 1. Canvas 0度在3点钟方向。
             // 2. 指针在12点钟方向，也就是 Canvas 的 270度。
-            // 3. 转盘是逆时针转(-rotate)，相当于指针顺时针扫过转盘。
-            // 公式：(初始指针角度 + 旋转过的角度) % 360 = 指针最终停留在转盘上的哪个角度
-            var angleUnderPointer = (270 + currentRot) % 360;
+            // 3. 转盘实际是逆时针旋转(-rotate)，等价于指针顺时针扫过转盘。
+            //    因此需要用指针角度减去已旋转角度，而不是相加。
+            // 公式：(指针初始角度 - (currentRot % 360) + 360) % 360
+            var normalizedRot = currentRot % 360;
+            var angleUnderPointer = (270 - normalizedRot + 360) % 360;
             
             // 计算下标
             var idx = Math.floor(angleUnderPointer / slice);
